<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3D9D9"
    tools:context=".ui.DetailsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/user_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/fullnameTxt"
        app:layout_constraintEnd_toStartOf="@+id/fullnameTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fullnameTxt" />

    <TextView
        android:id="@+id/fullnameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:text="@string/full_name"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/phone_call_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/phoneNumberTxt"
        app:layout_constraintEnd_toStartOf="@+id/phoneNumberTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phoneNumberTxt" />

    <TextView
        android:id="@+id/phoneNumberTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/phone_number"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/locationTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullnameTxt" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/location_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/locationTxt"
        app:layout_constraintEnd_toStartOf="@+id/locationTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/locationTxt" />

    <TextView
        android:id="@+id/locationTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/location"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bloodGroupTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTxt" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/blood_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/bloodGroupTxt"
        app:layout_constraintEnd_toStartOf="@+id/bloodGroupTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bloodGroupTxt" />

    <TextView
        android:id="@+id/bloodGroupTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/blood_group"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastDonationDateTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTxt" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/date_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/lastDonationDateTxt"
        app:layout_constraintEnd_toStartOf="@+id/lastDonationDateTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lastDonationDateTxt" />

    <TextView
        android:id="@+id/lastDonationDateTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/last_donation_date"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/donationDaysTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bloodGroupTxt" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/day_week_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/donationDaysTxt"
        app:layout_constraintEnd_toStartOf="@+id/donationDaysTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/donationDaysTxt" />

    <TextView
        android:id="@+id/donationDaysTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/donation_days"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/healthProblems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastDonationDateTxt" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/health_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/healthProblems"
        app:layout_constraintEnd_toStartOf="@+id/healthProblems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/healthProblems" />

    <TextView
        android:id="@+id/healthProblems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/health_problems"
        app:layout_constraintBottom_toTopOf="@+id/healthProblemsInfoTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donationDaysTxt" />

    <TextView
        android:id="@+id/healthProblemsInfoTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="..."
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthProblems" />

    <Button
        android:id="@+id/call"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#C83D20"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="8sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/call"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:cornerRadius="8dp"
        app:icon="@drawable/phone_call_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthProblemsInfoTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>